# kelix

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release-bundles.yml  release-container.yml
docker/: Dockerfile.agent-runner  build.sh  entrypoint.sh
docs/: CODING_CONVENTIONS.md  DESIGN.md  INFRA_BOOTSTRAP.md  KNOWLEDGE_PIPELINE.md  RELEASING.md
docs/protocol/: ADAPTER_PROTOCOL.md  CORE_PROTOCOL.md  INFRA_BOOTSTRAP_PROTOCOL.md  ORCHESTRATOR_PROTOCOL.md
examples/chat-assistant/: README.md  adapter.toml  kelix.toml
examples/claude-codex-team/: README.md  kelix.toml
examples/claude-onboarding/: README.md  kelix.toml
examples/codex-onboarding/: README.md  kelix.toml
examples/infra-management/: README.md
examples/ml-training/: README.md
examples/opencode-team/: README.md  kelix.toml  opencode.json
examples/software-project/: README.md
examples/trading-pipeline/: README.md
prompts/: coding-agent.md  coding-guardrails.md  knowledge-agent.md  onboarding-orchestrator.md  orchestrator.md  planning-agent.md  research-agent.md  review-agent.md
scripts/: install-dev.sh  package-release.sh  test-release.sh
src/: config.rs  error.rs  main.rs  paths.rs
src/adapter/: mod.rs  telegram.rs
src/commands/: cli.rs  core.rs  examples.rs  mod.rs  purge.rs  start.rs
src/frontend/: mod.rs
src/gateway/: inbound.rs  mod.rs  spawn.rs
src/loop_runner/: mod.rs  request.rs  util.rs
src/policy/: expand.rs  gate.rs  mod.rs
src/protocol/: adapter_msg.rs  core_msg.rs  mod.rs
src/session/: index.rs  log.rs  mod.rs  state.rs
(+14 files in other folders)
