[package]
name = "kelix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kelix"
path = "src/main.rs"

[[bin]]
name = "kelix-worker"
path = "src/bin/kelix-worker/main.rs"

[[bin]]
name = "kelix-orchestrator"
path = "src/bin/kelix-orchestrator/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
shlex = "1"
futures-util = "0.3"
tokio-tungstenite = "0.24"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
